--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.datasource.url = ${JDBC_DATASOURCE_URL}
+spring.datasource.initialization-mode=never
+spring.jpa.show-sql = true
+spring.jpa.generate-ddl=true
 
-
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 
 percentualSinal = 0.30
@@ -9,3 +15,7 @@ percentualSinal = 0.30
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
+
+
+sendgrid.key=SG.tRExvouRRAS29RadTO_33w.gHBY6SiJ3r6Y_YhTYAvWO3l9th6JRk-xnTRMvMehHls
+remetenteDefault=alucar.notificacoes@gmail.com
